--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "1.3.0",
+    "@types/html2canvas": "^0.5.35",
+    "@types/jspdf": "^1.3.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "1.3.0",
     "three": "0.160.0"
   },
   "devDependencies": {
