--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "1.3.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/html2canvas": "^0.5.35",
     "@types/jspdf": "^1.3.3",
     "html2canvas": "^1.4.1",
